internetGateway.tf
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.main.id

  tags = { Name = "${var.app_name} Internet Gateway " }
}
